# ATM-controller

./: .gitignore  CMakeLists.txt  README.md
include/: account.h  atm.h  bankAPI.h  card.h
src/: account.cpp  atm.cpp  bankAPI.cpp  card.cpp  main.cpp
test/: atm_test.cpp
